found cause of align items issue

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -49,7 +49,9 @@
   
   .card-container {
     width: 95%;
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     margin: 0 auto 45px auto;
   }
   
@@ -241,13 +243,10 @@
     }
     
     .card-container {
-      display: flex;
       flex-direction: row;
-      justify-content: center;
       align-items: center;
       flex-wrap: wrap;
       width: 80%;
-      margin-bottom: 45px;
     }
   
     .card-container article {
